--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <title></title> 
   </head>
   <body>
-    Demo
+    <script src="/dist/bundle.js" type="text/javascript"></script>
   </body>
 </html>
