--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
     <script src="/dist/bundle.js" type="text/javascript"></script>
+    <!-- <script type="module" src="src/app.js"></script> -->
   </body>
 </html>
